# myanimelist_downloader

./: .env.example  .gitignore  Dockerfile  build_upload_install.sh  docker-compose.yaml  setup.cfg
.github/workflows/: docker-publish.yml
