[metadata]
name = myanimelist_downloader
version = 0.0.6
author = Santeri Hetekivi
author_email = development@hetekivi.com
description = Download manga and anime lists from MyAnimeList.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SanteriHetekivi/myanimelist_downloader
project_urls =
    Bug Tracker = https://github.com/SanteriHetekivi/myanimelist_downloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    # Store/get MAL credentials.
    password-credentials==0.0.6
    # Handle directory.
    dir-handeler==0.0.1
    # Download MAL list.
    selenium==4.1.3
    # Download web driver for downloading MAL list.
    webdriver-manager==3.5.4
    # Read .env-file. 
    python-dotenv==0.20.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    myanimelist_downloader = myanimelist_downloader.command_line:main